src/test/ui/privacy/private-method.stderr
error[E0624]: method `nap` is private
  --> $DIR/private-method.rs:22:8
   |
LL |   nyan.nap();
   |        ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0624`.
